src/objects/CourseArticleMentorContact__c.object
<CustomObject>
    <description>Temporary mapping of course codes to mentor contact emails/name.  This is used in the VF pages when a user submits the form for contact my mentors for course articles.</description>
    <fields>
        <fullName>CourseCode__c</fullName>
        <label>Course Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MentorEmail__c</fullName>
        <label>Mentor Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MentorName__c</fullName>
        <label>Mentor Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Course Article Mentor Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CourseCode__c</columns>
        <columns>MentorEmail__c</columns>
        <columns>MentorName__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Article Mentor Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>